# CG-SR1

./: .gitignore  CMakeLists.txt  README.md  main  run.sh
src/: gl.h  loadObj.h  main  main.cpp
